fix play button position on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,7 @@ audio
 .table .preview-track-button {
 	float:right;
 	margin-left: 5px;
+	width: 35px;
 }
 
 /*Media Queries*/
